tests/ui/macros/rfc-3086-metavar-expr/syntax-errors.stderr
error: unexpected token: $
  --> $DIR/syntax-errors.rs:46:8
   |
LL |     ( $$ $a:ident ) => {
   |        ^

note: `$$` and meta-variable expressions are not allowed inside macro parameter definitions
  --> $DIR/syntax-errors.rs:46:8
   |
LL |     ( $$ $a:ident ) => {
   |        ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:53:19
   |
LL |         ${count() a b c}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:53:19
   |
LL |         ${count() a b c}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:56:20
   |
LL |         ${count($i a b c)}
   |                    ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:56:20
   |
LL |         ${count($i a b c)}
   |                    ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:58:23
   |
LL |         ${count($i, 1 a b c)}
   |                       ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:58:23
   |
LL |         ${count($i, 1 a b c)}
   |                       ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:60:21
   |
LL |         ${count($i) a b c}
   |                     ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:60:21
   |
LL |         ${count($i) a b c}
   |                     ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:63:22
   |
LL |         ${ignore($i) a b c}
   |                      ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:63:22
   |
LL |         ${ignore($i) a b c}
   |                      ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:65:21
   |
LL |         ${ignore($i a b c)}
   |                     ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:65:21
   |
LL |         ${ignore($i a b c)}
   |                     ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:68:19
   |
LL |         ${index() a b c}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:68:19
   |
LL |         ${index() a b c}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:70:19
   |
LL |         ${index(1 a b c)}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:70:19
   |
LL |         ${index(1 a b c)}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:73:19
   |
LL |         ${index() a b c}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:73:19
   |
LL |         ${index() a b c}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:75:19
   |
LL |         ${index(1 a b c)}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:75:19
   |
LL |         ${index(1 a b c)}
   |                   ^

error: meta-variable expression depth must be a literal
  --> $DIR/syntax-errors.rs:82:33
   |
LL |     ( $( $i:ident ),* ) => { ${ index(IDX) } };
   |                                 ^^^^^

error: unexpected token: {
  --> $DIR/syntax-errors.rs:88:8
   |
LL |     ( ${ length() } ) => {
   |        ^^^^^^^^^^^^

note: `$$` and meta-variable expressions are not allowed inside macro parameter definitions
  --> $DIR/syntax-errors.rs:88:8
   |
LL |     ( ${ length() } ) => {
   |        ^^^^^^^^^^^^

error: expected one of: `*`, `+`, or `?`
  --> $DIR/syntax-errors.rs:88:8
   |
LL |     ( ${ length() } ) => {
   |        ^^^^^^^^^^^^

error: meta-variables within meta-variable expressions must be referenced using a dollar sign
  --> $DIR/syntax-errors.rs:95:33
   |
LL |     ( $( $i:ident ),* ) => { ${ ignore() } };
   |                                 ^^^^^^

error: only unsuffixes integer literals are supported in meta-variable expressions
  --> $DIR/syntax-errors.rs:101:33
   |
LL |     ( $( $i:ident ),* ) => { ${ index(1u32) } };
   |                                 ^^^^^

error: meta-variable expression parameter must be wrapped in parentheses
  --> $DIR/syntax-errors.rs:107:33
   |
LL |     ( $( $i:ident ),* ) => { ${ count{i} } };
   |                                 ^^^^^

error: expected identifier
  --> $DIR/syntax-errors.rs:113:31
   |
LL |     ( $( $i:ident ),* ) => { ${ {} } };
   |                               ^^^^^^

error: meta-variables within meta-variable expressions must be referenced using a dollar sign
  --> $DIR/syntax-errors.rs:120:11
   |
LL |         ${count(foo)}
   |           ^^^^^

error: meta-variables within meta-variable expressions must be referenced using a dollar sign
  --> $DIR/syntax-errors.rs:128:11
   |
LL |         ${ignore(bar)}
   |           ^^^^^^

error: unrecognized meta-variable expression
  --> $DIR/syntax-errors.rs:135:33
   |
LL |     ( $( $i:ident ),* ) => { ${ aaaaaaaaaaaaaa(i) } };
   |                                 ^^^^^^^^^^^^^^ help: supported expressions are count, ignore, index and length

error: `count` can not be placed inside the inner-most repetition
  --> $DIR/syntax-errors.rs:12:24
   |
LL |     ( $i:ident ) => { ${ count($i) } };
   |                        ^^^^^^^^^^^^^

error: `count` can not be placed inside the inner-most repetition
  --> $DIR/syntax-errors.rs:17:24
   |
LL |     ( $i:ident ) => { ${ count($i) } };
   |                        ^^^^^^^^^^^^^

error: variable 'i' is still repeating at this depth
  --> $DIR/syntax-errors.rs:34:36
   |
LL |     ( $( $i:ident ),* ) => { count($i) };
   |                                    ^^

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:53:9
   |
LL |         ${count() a b c}
   |         ^ expected expression
...
LL |     extra_garbage_after_metavar!(a);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `extra_garbage_after_metavar` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:82:30
   |
LL |     ( $( $i:ident ),* ) => { ${ index(IDX) } };
   |                              ^ expected expression
...
LL |     metavar_depth_is_not_literal!(a);
   |     -------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `metavar_depth_is_not_literal` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:95:30
   |
LL |     ( $( $i:ident ),* ) => { ${ ignore() } };
   |                              ^ expected expression
...
LL |     metavar_token_without_ident!(a);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `metavar_token_without_ident` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:101:30
   |
LL |     ( $( $i:ident ),* ) => { ${ index(1u32) } };
   |                              ^ expected expression
...
LL |     metavar_with_literal_suffix!(a);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `metavar_with_literal_suffix` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:107:30
   |
LL |     ( $( $i:ident ),* ) => { ${ count{i} } };
   |                              ^ expected expression
...
LL |     metavar_without_parens!(a);
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `metavar_without_parens` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:113:30
   |
LL |     ( $( $i:ident ),* ) => { ${ {} } };
   |                              ^ expected expression
...
LL |     open_brackets_without_tokens!(a);
   |     -------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `open_brackets_without_tokens` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:120:9
   |
LL |         ${count(foo)}
   |         ^ expected expression
...
LL |     unknown_count_ident!(a);
   |     ----------------------- in this macro invocation
   |
   = note: this error originates in the macro `unknown_count_ident` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:128:9
   |
LL |         ${ignore(bar)}
   |         ^ expected expression
...
LL |     unknown_ignore_ident!(a);
   |     ------------------------ in this macro invocation
   |
   = note: this error originates in the macro `unknown_ignore_ident` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:135:30
   |
LL |     ( $( $i:ident ),* ) => { ${ aaaaaaaaaaaaaa(i) } };
   |                              ^ expected expression
...
LL |     unknown_metavar!(a);
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `unknown_metavar` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `i` in this scope
  --> $DIR/syntax-errors.rs:22:36
   |
LL |     ( $( $i:ident ),* ) => { count(i) };
   |                                    ^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__round!(a, b, c);
   |     ---------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `i` in this scope
  --> $DIR/syntax-errors.rs:28:29
   |
LL |     ( $i:ident ) => { count(i) };
   |                             ^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__no_round!(a);
   |     ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `a` in this scope
  --> $DIR/syntax-errors.rs:147:37
   |
LL |     no_curly__rhs_dollar__no_round!(a);
   |                                     ^ not found in this scope

error[E0425]: cannot find function `count` in this scope
  --> $DIR/syntax-errors.rs:22:30
   |
LL |     ( $( $i:ident ),* ) => { count(i) };
   |                              ^^^^^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__round!(a, b, c);
   |     ---------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `count` in this scope
  --> $DIR/syntax-errors.rs:28:23
   |
LL |     ( $i:ident ) => { count(i) };
   |                       ^^^^^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__no_round!(a);
   |     ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `count` in this scope
  --> $DIR/syntax-errors.rs:39:23
   |
LL |     ( $i:ident ) => { count($i) };
   |                       ^^^^^ not found in this scope
...
LL |     no_curly__rhs_dollar__no_round!(a);
   |     ---------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 39 previous errors

For more information about this error, try `rustc --explain E0425`.
